--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.0",
-    "chess.js": "^1.0.0-beta.8",
+    "chess.js": "^1.0.0",
     "chessboardjsx": "^2.4.7",
     "cra-template": "1.2.0",
     "framer-motion": "^11.15.0",
@@ -16,7 +16,8 @@
     "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.9.0",
-    "stockfish": "^16.0.0"
+    "stockfish": "^16.0.0",
+    "stockfish.wasm": "^0.10.0"
   },
   "scripts": {
     "start": "react-scripts start",
